# terramine-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: imgui_settings.ini
assets/shaders/: debug_lines.frag  debug_lines.vert  low_detail.frag  low_detail.vert  postprocessing.frag  postprocessing.vert  shader.wgsl
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: imgui_settings.ini  main.rs  prelude.rs
crates/engine/src/app/: mod.rs
crates/engine/src/app/utils/: cfg.rs  logger.rs  mod.rs  runtime.rs  user_io.rs  werror.rs
crates/engine/src/app/utils/concurrency/: channel.rs  loading.rs  mod.rs
crates/engine/src/app/utils/graphics/: light.rs  mesh.rs  mod.rs  shader.rs  surface.rs  texture.rs
crates/engine/src/app/utils/graphics/camera/: frustum.rs  mod.rs
crates/engine/src/app/utils/graphics/debug_visuals/: camera.rs  chunk_array.rs  mod.rs
crates/engine/src/app/utils/graphics/ui/: imgui_constructor.rs
crates/engine/src/app/utils/profiler/: mod.rs
crates/engine/src/app/utils/reinterpreter/: mod.rs
crates/engine/src/app/utils/saves/: mod.rs  stack_heap.rs
crates/engine/src/app/utils/terrain/chunk/: chunk_array.rs  commands.rs  iterator.rs  mesh.rs  mod.rs
crates/engine/src/app/utils/terrain/chunk/tasks/: mod.rs
crates/engine/src/app/utils/terrain/voxel/: atlas.rs  mod.rs  voxel_data.rs
crates/engine/src/app/utils/terrain/voxel/generator/: mod.rs  noise.rs
crates/engine/src/app/utils/time/: timer.rs
crates/engine/src/app/utils/window/: message_box.rs  mod.rs
crates/engine/src/shaders/: low_detail.vert
crates/math_linear/: Cargo.toml
crates/profiler_macros/: Cargo.toml
crates/terramine/: Cargo.toml  build.rs
crates/terramine_ecs/: Cargo.toml
crates/terramine_macros/: Cargo.toml
src/: camera.rs  fragment_shader-compiled.glsl  fragment_shader.glsl  graphics.rs  imgui_settings.ini  main.rs  prelude.rs  shader.rs  texture.rs  user_io.rs  vertex_buffer.rs  vertex_shader-compiled.glsl  vertex_shader.glsl  window.rs
src/app/: mod.rs  plugin.rs
src/app/utils/: assets.rs  (+21 more)
src/shaders/: chunks_full.wgsl  chunks_low.wgsl  debug_lines-compiled.frag  debug_lines-compiled.vert  debug_lines.frag  debug_lines.vert  default.wgsl  fragment_shader-compiled.frag  fragment_shader.frag  full_detail.frag  full_detail.vert  low_detail.frag  low_detail.vert  postprocessing.frag  postprocessing.vert  shader.wgsl  vertex_shader-compiled.glsl  vertex_shader-compiled.vert  vertex_shader.glsl  vertex_shader.vert
src/utils/: graphics.rs  mod.rs  user_io.rs  window.rs
test_allocation/: test_allocation.hp  test_allocation.stk
test_merging/: test_merging.hp  test_merging.stk
(+176 files in other folders)
