[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/profiler_macros",
    "crates/math_linear",
]

[workspace.package]
version = "0.0.2"
edition = "2021"

[workspace.dependencies]
engine = { path = "crates/engine", version = "=0.0.2" }
math_linear = { path = "crates/math_linear", version = "=0.0.2", features = ["byte_muck"] }
profiler_macros = { path = "crates/profiler_macros", version = "=0.0.2" }
