[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/profiler_macros",
    "crates/math_linear",
]

[workspace.package]
version = "0.0.2"
edition = "2024"

[workspace.dependencies]
engine = { path = "crates/engine" }
math_linear = { path = "crates/math_linear", features = ["byte_muck"] }
profiler_macros = { path = "crates/profiler_macros" }
