[package]
name = "terramine"
version.workspace = true
edition.workspace = true

[dependencies]
profiler_macros.workspace = true
math_linear.workspace = true

# Graphics
glium = "0.35.0"
winit = "0.30.5"
imgui = "0.12.0"
imgui-glium-renderer = "0.13.0"
imgui-winit-support = "0.13.0"

directx_math = "0.2.2"
image = "0.24.3"
crossbeam = "0.8.1"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
thiserror = "1.0.40"
rayon = "1.7.0"
derive-deref-rs = "0.1.1"
lazy_static = "1.4.0"
portable-atomic = { version = "1.2.0", features = ["float"] }
huffman-compress = "0.6.1"
bit-vec = "0.6.3"
array-init = "2.1.0"
# FIXME(hack3rmann): remove cpython from the project
# cpython = { version = "0.7.1", features = ["extension-module"] }
smallvec = { version = "1.10.0", features = ["const_generics"] }
parse-display = "0.8.0"
noise = "0.8.2"
futures = "0.3.28"
user-error = "1.2.8"
itertools = "0.10.5"
atomic = "0.5.1"
ordered-float = "3.6.0"
rand = "0.8.5"
spin = { version = "0.9.8", features = ["mutex", "spin_mutex", "ticket_mutex", "rwlock", "once", "lazy", "barrier", "lock_api"] }

[target."cfg(windows)".dependencies]
winapi = "0.3.9"

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"

[features]
release = []
